# micrograd_ocaml

./: README.md  dune-project  micrograd_ocaml.opam
lib/: dune  gradient_node.ml  gradient_node.mli  neural_network.ml  neural_network.mli  value.ml  value.mli
test/: dune  test_micrograd_ocaml.ml
