(lang dune 3.14)

(name micrograd_ocaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Anish Krishnan")

(maintainers "Anish Krishnan")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name micrograd_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
